<resources>
    <string name="app_name">Farming App</string>
    <string name="landing_title">Decision support system for Design &amp; Planning of Drip Irrigation System for hilly regions</string>
    <string name="terrace_field_card_title">Design for Terrace Field</string>
    <string name="plain_field_card_title">Design for Plain Field</string>
    <string name="terrace_field_card_subtitle">Start design for Terrace Field</string>
    <string name="plain_field_card_subtitle">Start design for Plain Field</string>
    <string name="farmer_detail_title">Farmer Details</string>
    <string name="name_hint">Name</string>
    <string name="farmer_name_hint">Farmer Name</string>
    <string name="farmer_address_hint">Farmer Address</string>
    <string name="address_hint">Address</string>
    <string name="phone_hint">Phone Number</string>
    <string name="email_hint">Email Address</string>
    <string name="back">Back</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="next">Next -></string>
    <string name="crop_detail_title">Crop Details</string>
    <string name="crop_name_hint">Name of the Crop</string>
    <string name="soil_type_hint">Soil Type</string>
    <string name="plant_to_plant_hint">Plant to Plant Distance (m)</string>
    <string name="row_to_row_hint">Row to Row Distance (m)</string>
    <string name="plant_shadow_area_hint">Area of Plant Shadow at Noon (m<small><sup>2</sup></small>)</string>
    <string name="e_pan_hint">E-Pan (mm / day)</string>
    <string name="wetted_area_hint">Wetted Area %</string>
    <string name="lbl_crop_factor">Crop Factor</string>
    <string name="lbl_crop_canopy">Crop Canopy</string>
    <string name="lbl_plant_area">Area of each Plant (m2)</string>
    <string name="lbl_system_efficiency">System Efficiency (%)</string>
    <string name="system_efficiency_value">Taken as 85%</string>
    <string name="lateral_detail_title">Lateral Details</string>
    <string name="select_dripper_hint">Select Dripper</string>
    <string name="dripper_spacing_hint">Dripper Spacing (m)</string>
    <string name="lateral_spacing_hint">Lateral Spacing (m)</string>
    <string name="dripper_per_plant_hint">Dripper / Plant</string>
    <string name="dripper_water_title">Dripper / Water Requirement</string>
    <string name="length_of_field">Length of Field</string>
    <string name="width_of_field">Width of Field</string>
    <string name="lateral_design_selection_title"><![CDATA[Lateral Selection & Design]]></string>
    <string name="lateral_terrace_design_selection_title"><![CDATA[Lateral Terrace Selection & Design]]></string>
    <string name="sub_main_terrace_design_selection_title"><![CDATA[Sub-Main Terrace Selection & Design]]></string>
    <string name="sub_main_plain_design_selection_title"><![CDATA[Sub-Main Plain Selection & Design]]></string>
    <string name="mainline_design_selection_title"><![CDATA[Mainline Selection & Design]]></string>
    <string name="select_lateral_diameter_hint">Lateral Diameter</string>
    <string name="pipe_material_hint">Pipe Material</string>
    <string name="lateral_terrace_number_hint">Number of Lateral / Terrace</string>
    <string name="length_each_lateral_terrace_hint">Length of Lateral on each Terrace</string>
    <string name="length_each_sub_main_terrace_hint">Length of Sub-Main on each Terrace</string>
    <string name="total_length_lateral_terrace_hint">Total Lateral Length</string>
    <string name="select_sub_main_diameter_hint">Sub-Main Diameter</string>
    <string name="add">Add</string>
    <string name="mainline_diameter_hint">Mainline Diameter</string>
    <string name="mainline_length_hint">Length of Mainline</string>
    <string name="outlet_factor_hint">Outlet Factor</string>
    <string name="value_outlet_factor">Taken as 0.35</string>
    <string name="calculated_head_loss_hint">Calculated Head-Loss (m)</string>
    <string name="total_discharge_of_mainline_hint">Total Discharge of Mainline (lph)</string>
    <string name="water_source_tank_location_info_title"><![CDATA[Water source & Tank location Info]]></string>
    <string name="water_source_hint">Water Source</string>
    <string name="water_tank_location_hint">Water Tank Location</string>
    <string name="result_title">Result</string>
    <string name="selected_dripper_size_hint">Selected Dripper Size (lph)</string>
    <string name="number_of_dripper_per_plant_hint">Number of Dripper per Plant</string>
    <string name="selected_lateral_diameter_hint">Selected Lateral Diameter (mm)</string>
    <string name="length_of_lateral_hint">Length of Lateral</string>
    <string name="selected_mainline_diameter_hint">Selected Mainline Diameter (mm)</string>
    <string name="number_of_lateral_submain_hint">Number of Lateral on Sub-Main</string>
    <string name="number_of_dripper_submain_hint">Number of Drippers Used for Sub-Main</string>
    <string name="selected_submain_diameter_hint">Selected Sub-Main Diameter</string>
    <string name="length_of_submain_hint">Length of Sub-Main (m)</string>
    <string name="share_result_title">Share</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="disclaimer_message"><![CDATA[Thank you for using this decision support system (DSS) for the Design & Planning of DIS for hilly regions. The design of the Drip Irrigation System is based on data inputted by you and the values suggested by the DSS for Design and Planning of DIS for hilly regions, as default values of different parameters used in different computations. Besides a suitable layout, DSS also provides a cost estimation based on indicative prices of different components of the micro-irrigation system. The actual cost of installing the system can be obtained from the different suppliers approved by your state government.]]></string>
    <string name="finish">FINISH</string>
    <string name="terrace_detail_title">Terrace Details</string>
    <string name="length_each_terrace_hint">Enter length of each Terrace (m)</string>
    <string name="total_length_terrace_hint">Total Terrace Length</string>
    <string name="width_each_terrace_hint">Enter width of each Terrace (m)</string>
    <string name="total_width_terrace_hint">Total Terrace Width</string>
    <string name="terrace_width_helper_text">*Width range between 1 m - 3.5 m</string>
    <string name="cumulative_height_each_terrace_hint">Enter cumulative height of each Terrace (m)</string>
    <string name="terrace_height_helper_text">*Include height of tank placement</string>
    <string name="total_height_terrace_hint">Totla Terrace Height</string>
    <string name="length_lateral_submain_hint">Length of Lateral on one side of Sub-Main (m)</string>
    <string name="label">Label</string>
    <string name="value">Value</string>
    <string name="divider">:</string>
    <string name="user_saved">User information is saved</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="cost_detail_title">Cost Details</string>
    <string name="some_fields_missing">Some fields are missing</string>
    <string name="value_missing">Value missing</string>
    <string name="_1">1</string>
    <string name="application_not_found">Application not found</string>
    <string name="calculated_result">Calculated Result</string>
    <string name="calculate">Calculate</string>
    <string name="quantity">Quantity</string>
    <string name="amount">Amount</string>
    <string name="rate">Rate</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
</resources>