<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="6dp"
        style="@style/TextLabel"
        android:text="@string/label"
        android:textAlignment="viewEnd"
        android:layout_marginEnd="6dp"
        app:layout_constraintEnd_toStartOf="@+id/tvDivider"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        style="@style/TextLabel"
        android:text="@string/divider"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvLabel"
        app:layout_constraintEnd_toStartOf="@+id/tvValue"/>

    <TextView
        android:id="@+id/tvValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="6dp"
        style="@style/TextValue"
        android:text="@string/value"
        android:layout_marginStart="6dp"
        android:textAlignment="viewStart"
        app:layout_constraintStart_toEndOf="@+id/tvDivider"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>